syntax="proto2";

package protobuf;

message Simple {
    required string event_name = 1;
    required string id = 2;    
}

message Feature {
    required string event_name = 1;
    required string id = 2;
    required string group = 3;
    required string coords = 4;
}

message Player {
    required string event_name = 1;
    required string id = 2;
    required double lon = 3;
    required double lat = 4;
}

message GameInfo {
    required string event_name = 1;
    required string game = 2;
    required string role = 3;
}

message GameRank {
    required string event_name = 1;
    required string game = 2;
    repeated PlayerRank players_rank = 3; 
}

message PlayerRank {
    required string player = 1;
    required int32 points = 2;
}

message Distance {
    required string event_name = 1;
    required double dist = 2;
}

message Detection {
    required string event_name = 1;
    required string feat_id = 2;
	required double lat = 3;
	required double lon = 4;
	required string near_by_feat_id = 5;
	required double near_by_meters = 6;
	required string intersects = 7;
}